--- a/src/main/webapp/pages/credit/reportmanager/reporttemp_edit.html
+++ b/src/main/webapp/pages/credit/reportmanager/reporttemp_edit.html
@@ -19,6 +19,11 @@ include("/pages/template/head.html"){} %>
 		},
 	};
 </script>
+<script type="text/javascript">
+	$(function(){
+	
+	})
+</script>
 
 <% }; var bodyContent = { %>
 <form name="form1" action="" method="post" class="form-horizontal"
@@ -43,9 +48,17 @@ include("/pages/template/head.html"){} %>
 					<input  value= '${model.id}' type="hidden" name="attr.id" />				
 				</td>
 			</tr>
-		<%}else {%>
+		<%}else if(model.node_type=='1'){%>
 			<tr>
-				<td style="text-align: right;">模板名称</td>
+				<td style="text-align: right;">报告类型</td>
+				<td>
+					<select name="attr.report" class="form-control" valid="vselect" validname="请选择报告类型">
+						${reportType}
+					</select>				
+				</td>
+			</tr>
+			<tr>
+				<td style="text-align: right;">父模板名称</td>
 				<td>
 					<input class="form-control" type="text" name="attr.temp_name"
 				value="" valid='vtext' validname='模板名称' />
@@ -57,7 +70,36 @@ include("/pages/template/head.html"){} %>
 					<input  value= '${model.id}' type="hidden" name="attr.id" />				
 				</td>
 			</tr>
-		<%}%>		
+		<%}else if(model.node_type=='2'){%>	
+			<tr>
+				<td style="text-align: right;">报告类型</td>
+				<td>
+					<select name="attr.report" class="form-control" valid="vselect" validname="请选择报告类型">
+						${reportType}
+					</select>				
+				</td>
+			</tr>
+			<tr>
+				<td style="text-align: right;">父模板名称</td>
+				<td>
+					<select name="attr.parent_temp" class="form-control" valid="vselect" validname="请选择父模板名称">
+						${reportType}
+					</select>				
+				</td>
+			</tr>
+			<tr>
+				<td style="text-align: right;">模板名称</td>
+				<td>
+					<input class="form-control" type="text" name="attr.temp_name"
+				value="" valid='vtext' validname='模板名称' />
+					<input  value= '${model.create}' type="hidden" name="attr.create" />
+					<input  value= '${model.node_type}' type="hidden" name="attr.node_type" />
+					<input  value= '${model.report}' type="hidden" name="attr.report" />
+					<input  value= '${model.create_date}' type="hidden" name="attr.create_date" />
+					<input  value= '${model.id}' type="hidden" name="attr.id" />				
+				</td>
+			</tr>
+		<%}%>	
 		
 	</table>
 
