--- a/src/main/webapp/pages/credit/reportmanager/reporttemp_list.html
+++ b/src/main/webapp/pages/credit/reportmanager/reporttemp_list.html
@@ -15,27 +15,27 @@ jQuery(function($) {
 		height : 620,
 		form : document.form1,
 		list : function() {
-			var url = '/credit/reporttempmanager/list';
+			var url = '/credit/reportmodulemanager/list';
 			this.form.action = url;
 			this.form.submit();
 		},
 		view : function(id) {
-			var url = '/credit/reporttempmanager/view/'+id;
+			var url = '/credit/reportmodulemanager/view/'+id;
 			var title = '查看模板信息';
 			Iframe(url, this.width, this.height, title, false, false, false, EmptyFunc);
 		},
 		add : function(id) {
-			var url = '/credit/reporttempmanager/add?id='+id;
+			var url = '/credit/reportmodulemanager/add?id='+id;
 			var title = '添加模板信息';
 			Iframe(url, this.width, this.height, title);
 		},
 		edit : function(id) {
-			var url = '/credit/reporttempmanager/edit?id='+id 
+			var url = '/credit/reportmodulemanager/edit?id='+id 
 			var title = '修改模板信息';
 			Iframe(url, this.width, this.height, title); 
 		},
 		del : function(id) {
-			var url = '/credit/reporttempmanager/delete?id='+id;
+			var url = '/credit/reportmodulemanager/delete?id='+id;
 			var title = '确认要删除该模板信息？';
 			Confirm(title, function() {
 				form1.action = url;
@@ -175,6 +175,9 @@ function loadReady() {
 		</button>
 		<button type="button" class="btn btn-default" onclick="resetForm();">
 		 		<span class="glyphicon glyphicon-refresh"></span> 重 置
+		</button>
+		<button type="button" class="btn btn-default" onclick="oper.add(0);">
+		 		<span class="glyphicon glyphicon-refresh"></span> 添加
 		</button>
 <!-- 数据列表 -->
 	<table class="table table-striped table-bordered table-hover">
