--- a/src/main/webapp/pages/credit/reportmanager/reporttemp_add.html
+++ b/src/main/webapp/pages/credit/reportmanager/reporttemp_add.html
@@ -19,17 +19,30 @@ include("/pages/template/head.html"){} %>
 		},
 		typechange:function(){
 			var value=$("select[name='moduletype']").find("option:selected").val();
-			if(value==0){
-				$(".parent").attr("disabled","disabled").hidden()
-				$(".child").attr("disabled","disabled").hidden()
+			if(value=='0'){
+				$(".parent").attr("disabled","disabled").hide()
+				$(".child").attr("disabled","disabled").hide()
 				$(".report").removeAttr("disabled").show()
-			}else if(value==1){
-				
+			}else if(value=='1'){
+				$(".parent").removeAttr("disabled").show()
+				$(".child").attr("disabled","disabled").hide()
+				$(".report").attr("disabled","disabled").hide()
+			}else if(value=='2'){
+				$(".parent").attr("disabled","disabled").hide()
+				$(".child").removeAttr("disabled").show()
+				$(".report").attr("disabled","disabled").hide()
 			}else{
-				
+				$(".parent").attr("disabled","disabled").hide()
+				$(".child").removeAttr("disabled","disabled").hide()
+				$(".report").attr("disabled","disabled").hide()
 			}
-		}
+		},
 	};
+</script>
+<script type="text/javascript">
+	$(function(){
+		oper.typechange()
+	})
 </script>
 
 <% }; var bodyContent = { %>
@@ -68,18 +81,20 @@ include("/pages/template/head.html"){} %>
 		<%}else{%>
 			<tr>
 				<td style="text-align: right;">模板类型</td>
+				<td>
 				<select name="moduletype" class="form-control" valid="vselect" validname="请选择模板类型"
 					onchange="oper.typechange()">
 						<option value="">请选择模板类型</option>
 						<option value="0">报告类型</option>
 						<option value="1">父模板</option>
 						<option value="2">子模板</option>
-					</select>
+				</select>
+				</td>
 			</tr>
-			<tr class="report">
+			<tr class="report" >
 				<td style="text-align: right;">报告类型</td>
 				<td>
-					<select name="attr.report" onchange="" class="form-control" valid="vselect" validname="请选择报告类型">
+					<select name="attr.report" onchange="oper.reportchange()" class="form-control" valid="vselect" validname="请选择报告类型">
 						${reportType}
 					</select>
 					<input  value= '' type="hidden" name="attr.temp_name" />
