--- a/src/main/webapp/pages/credit/reportmanager/reporttemp_edit.html
+++ b/src/main/webapp/pages/credit/reportmanager/reporttemp_edit.html
@@ -1,4 +1,5 @@
 <% var reportType = reportType.getReportTypeString(model.report!''); %>
+<% var reportType2 = module.getReportModuleString(model.report!''); %>
 <% DIRECTIVE SAFE_OUTPUT_OPEN; var headContent = {
 include("/pages/template/head.html"){} %>
 <script type="text/javascript">
@@ -18,10 +19,15 @@ include("/pages/template/head.html"){} %>
 			$("input[name='attr.temp_name']").val(value);
 		},
 		reportchange2:function(){
+			var value=$("select[name='attr.report']").find("option:selected").attr("m-id");	
+			$("input[name='attr.parent_temp']").val(value)
+		},		
+		reportchange3:function(){
 			var value=$("select[name='attr.report']").find("option:selected").val();
-			
-			 var html="";
+			var html="";
+			console.log(value)
 			$.post("/credit/reportmodulemanager/findParentModules",{"report":value},function(data){
+				console.log(data)
 				for(item in data){
 					if(${model.id}==data[item].id){
 						html+="<option selected value='"+data[item].id+"'>"+data[item].temp_name+"</option>";
@@ -38,6 +44,7 @@ include("/pages/template/head.html"){} %>
 <script type="text/javascript">
 $(function(){
 	oper.reportchange2();
+	oper.reportchange3();
 })
 </script>
 
@@ -58,9 +65,7 @@ $(function(){
 					</select>
 					<input  value= '${model.temp_name}' type="hidden" name="attr.temp_name" />
 					<input  value= '${model.parent_temp}' type="hidden" name="attr.parent_temp" />
-					<input  value= '${model.create}' type="hidden" name="attr.create" />
 					<input  value= '${model.node_type}' type="hidden" name="attr.node_type" />
-					<input  value= '${model.create_date}' type="hidden" name="attr.create_date" />									
 					<input  value= '${model.id}' type="hidden" name="attr.id" />				
 				</td>
 			</tr>
@@ -68,8 +73,8 @@ $(function(){
 			<tr>
 				<td style="text-align: right;">报告类型</td>
 				<td>
-					<select name="attr.report" class="form-control" valid="vselect" validname="请选择报告类型">
-						${reportType}
+					<select name="attr.report" class="form-control" valid="vselect" validname="请选择报告类型" onchange="oper.reportchange2()">
+						${reportType2}
 					</select>				
 				</td>
 			</tr>
@@ -77,12 +82,9 @@ $(function(){
 				<td style="text-align: right;">父模板名称</td>
 				<td>
 					<input class="form-control" type="text" name="attr.temp_name"
-				value="" valid='vtext' validname='模板名称' />
+				value="${model.temp_name}" valid='vtext' validname='父模板名称' />
 					<input  value= '${model.parent_temp}' type="hidden" name="attr.parent_temp" />
-					<input  value= '${model.create}' type="hidden" name="attr.create" />
 					<input  value= '${model.node_type}' type="hidden" name="attr.node_type" />
-					<input  value= '${model.report}' type="hidden" name="attr.report" />
-					<input  value= '${model.create_date}' type="hidden" name="attr.create_date" />
 					<input  value= '${model.id}' type="hidden" name="attr.id" />				
 				</td>
 			</tr>
@@ -90,8 +92,8 @@ $(function(){
 			<tr>
 				<td style="text-align: right;">报告类型</td>
 				<td>
-					<select name="attr.report" class="form-control" onchange="oper.reportchange2();" valid="vselect" validname="请选择报告类型">
-						${reportType}
+					<select name="attr.report" class="form-control" onchange="oper.reportchange3();" valid="vselect" validname="请选择报告类型">
+						${reportType2}
 					</select>				
 				</td>
 			</tr>
@@ -108,10 +110,7 @@ $(function(){
 				<td>
 					<input class="form-control" type="text" name="attr.temp_name"
 				value="${model.temp_name}" valid='vtext' validname='模板名称' />
-					<input  value= '${model.create}' type="hidden" name="attr.create" />
 					<input  value= '${model.node_type}' type="hidden" name="attr.node_type" />
-					<input  value= '${model.report}' type="hidden" name="attr.report" />
-					<input  value= '${model.create_date}' type="hidden" name="attr.create_date" />
 					<input  value= '${model.id}' type="hidden" name="attr.id" />				
 				</td>
 			</tr>
