--- a/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
@@ -92,8 +92,9 @@
                                 <input name="business_date_end" type="text" class="form-control" id="qy_date" placeholder="">
                             </div>
                             <div class="form-group">
-                                <label for="qy_money" class="mb-2">注册资本</label>
-                                <input name="registered_capital" id="qy_money" class="form-control"></input>
+                                <label for="qy_money" class="mb-2" style="display:block">注册资本（元）</label>
+                                <input name="registered_capital" id="qy_money" class="form-control" type="number" style="width: 12.8rem;display: inline-block;">
+                                <input name="" id="qy_unit" class="form-control" type="text" style="width: 8rem;display: inline-block;" placeholder="请输入币种" >
                             </div>
                         </div>
                         <div class="firm-info mt-4 px-5 d-flex justify-content-between">
@@ -107,7 +108,14 @@
                             </div>
                             <div class="form-group">
                                 <label for="qy_state" class="mb-2">登记状态</label>
-                                <input name="registration_status" id="qy_state" class="form-control"></input>
+                                <select name="registration_status" id="qy_state" class="form-control">
+                                	<option selected="selected" value="">存续、在业</option>
+                                	<option value="">吊销</option>
+                                	<option value="">迁入</option>
+                                	<option value="">迁出</option>
+                                	<option value="">停业</option>
+                                	<option value="">清算</option>
+                                </select>
                             </div>
                         </div>
                         <div class="firm-info mt-4 px-5 d-flex justify-content-start">
