--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -346,7 +346,7 @@
    
 
 </html>
-<<script type="text/javascript">
+<script type="text/javascript">
 function agentchange(){
 		var value=$("#agency_id").find("option:selected").val();
 		var html="";
