--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -2,7 +2,7 @@
 <% var sandbar = tempDict.getSysDictDetailString('continent',model.continent); %>
 <% var ordertype = tempDict.getSysDictDetailString('ordertype'); %>
 <% var language = tempDict.getSysDictDetailString('language'); %>
-<% var orderspeed = tempDict.getSysDictDetailString('orderspeed',model.speed); %>
+<% var orderspeed = tempDict.getSysDictDetailString('orderspeed'); %>
 <% var reportType = reportType.getReportTypeString2(model.report_type!''); %>
 <% var upload_busType = tempDict.getSysDictDetailString('upload_busType',model.business_type !); %>
 
