--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>reported</title>
+     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/report_css/reported_basic_info.css">
 </head>
 <div id="container" class="row animated fadeIn">
     <div class="main">
