--- a/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
@@ -69,11 +69,13 @@
                         <div class="firm-info mt-4 px-5 d-flex justify-content-between">
                             <div class="form-group">
                                 <label for="qy_code" class="mb-2" >统一社会信用代码</label>
-                                <input id="credit_code" type="text" name="credit_code" class="form-control" id="qy_code" placeholder="">
+                                <input id="credit_code" type="number" name="credit_code" class="form-control" id="qy_code" placeholder="">
+                           		<p class="errorInfo">统一社会信用代码必须为18位</p>
                             </div>
                             <div class="form-group">
                                 <label for="qy_person" class="mb-2" >法人代表</label>
                                 <input type="text" name="legal" class="form-control" id="qy_person" placeholder="">
+                          		<p class="errorInfo">不能包含数字</p>
                             </div>
                             <div class="form-group">
                                 <label for="qy_type" class="mb-2">公司性质</label>
@@ -92,7 +94,7 @@
                                 <input name="business_date_end" type="text" class="form-control" id="qy_date" placeholder="">
                             </div>
                             <div class="form-group">
-                                <label for="qy_money" class="mb-2" style="display:block">注册资本（元）</label>
+                                  <label for="qy_money" class="mb-2" style="display:block">注册资本（元）</label>
                                 <input name="registered_capital" id="qy_money" class="form-control" type="number" style="width: 12.8rem;display: inline-block;">
                                 <input name="" id="qy_unit" class="form-control" type="text" style="width: 8rem;display: inline-block;" placeholder="请输入币种" >
                             </div>
@@ -105,10 +107,11 @@
                             <div class="form-group">
                                 <label for="qy_office" class="mb-2">登记机关</label>
                                 <input name="registration_authority" type="text" class="form-control" id="qy_office" placeholder=""">
+                           		<p class="errorInfo">不能包含数字</p>
                             </div>
                             <div class="form-group">
                                 <label for="qy_state" class="mb-2">登记状态</label>
-                                <select name="registration_status" id="qy_state" class="form-control">
+                             	 <select name="registration_status" id="qy_state" class="form-control">
                                 	<option selected="selected" value="">存续、在业</option>
                                 	<option value="">吊销</option>
                                 	<option value="">迁入</option>
