--- a/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
@@ -69,8 +69,8 @@
                         <div class="firm-info mt-4 px-5 d-flex justify-content-between">
                             <div class="form-group">
                                 <label for="qy_code" class="mb-2" >统一社会信用代码</label>
-                                <input id="credit_code" type="number" name="credit_code" class="form-control" id="qy_code" placeholder="">
-                           		<p class="errorInfo">统一社会信用代码必须为18位</p>
+                                <input id="credit_code" type="text" name="credit_code" class="form-control" id="qy_code" placeholder="">
+                           		<p class="errorInfo">统一社会信用代码为18位字母和数字</p>
                             </div>
                             <div class="form-group">
                                 <label for="qy_person" class="mb-2" >法人代表</label>
@@ -94,8 +94,9 @@
                                 <input name="business_date_end" type="text" class="form-control" id="qy_date" placeholder="">
                             </div>
                             <div class="form-group">
-                                <label for="qy_money" class="mb-2">注册资本</label>
-                                <input name="registered_capital" id="qy_money" class="form-control"></input>
+                                  <label for="qy_money" class="mb-2" style="display:block">注册资本（元）</label>
+                                <input name="registered_capital" id="qy_money" class="form-control" type="number" style="width: 12.8rem;display: inline-block;">
+                                <input name="" id="qy_unit" class="form-control" type="text" style="width: 8rem;display: inline-block;" placeholder="请输入币种" >
                             </div>
                         </div>
                         <div class="firm-info mt-4 px-5 d-flex justify-content-between">
@@ -110,7 +111,14 @@
                             </div>
                             <div class="form-group">
                                 <label for="qy_state" class="mb-2">登记状态</label>
-                                <input name="registration_status" id="qy_state" class="form-control"></input>
+                             	 <select name="registration_status" id="qy_state" class="form-control">
+                                	<option selected="selected" value="">存续、在业</option>
+                                	<option value="">吊销</option>
+                                	<option value="">迁入</option>
+                                	<option value="">迁出</option>
+                                	<option value="">停业</option>
+                                	<option value="">清算</option>
+                                </select>
                             </div>
                         </div>
                         <div class="firm-info mt-4 px-5 d-flex justify-content-start">
@@ -228,7 +236,17 @@
                 </div>
                 <div class="form-inline justify-content-center my-3">
                     <label for="" class="control-label">变更项：</label>
-                    <input type="text" class="form-control" id="modal_change_items">
+                    <select  class="form-control" id="modal_change_items">
+                    	<option selected="selected">企业名称</option>
+                    	<option>经营范围</option>
+                    	<option>注册资本</option>
+                    	<option>地址</option>
+                    	<option>法定代表人</option>
+                    	<option>公司类型</option>
+                    	<option>营业期限</option>
+                    	<option>股东与持股</option>
+                    	<option>注册号</option>
+                    </select>
                 </div>
                 <div class="form-inline justify-content-center my-3">
                     <label for="" class="control-label">变更前：</label>
