--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -458,7 +458,7 @@
 		                             <div>
 				                           <div class="uploadFile mt-3 mr-3 ml-3">
 				                               <div class="over-box">
-				                                   <img src="../imgs/order/PDF.png" class="m-auto"/>
+				                                   <img src="${BASE_PATH }static/credit/imgs/order/PDF.png" class="m-auto"/>
 				                                   <p class="mt-2">暂无附件</p>
 				                               </div>
 				                           </div>
