--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -15,6 +15,9 @@
     	#table tbody tr td:first-child {
     		color:var(--fontColor)!important;
     	}
+    	.fixed-table-body-columns .table tr {
+    		height:48.4px!important;
+    	}
     </style>
     <script type="text/javascript">
 	    var BASE_PATH = "${BASE_PATH }";
