--- a/src/main/webapp/pages/credit/pricemanager/price_list.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_list.html
@@ -86,7 +86,7 @@ var paginator = function(page) {
 						${countrytype!}
 			</select> 
 		</div>
-				<div class="form-group">
+		<div class="form-group">
 		   <label  class="control-label">是否启用</label>
 		   <select name="attr.usabled" class="form-control" style="width: 200px;">
 					${usabled!}
@@ -106,7 +106,7 @@ var paginator = function(page) {
 	<table class="table table-striped table-bordered table-hover">
 		<thead>
 			<tr>
-				<th name="t.id" class="sorting">序号</th>
+				<th name="t.id" class="sorting">价格ID</th>
 				<th name="os.detail_name" class="sorting">报告速度</th>
 
 				<th name="rt.name" class="sorting">报告类型</th>
